@@ -12,11 +12,9 @@ export(bestDMNFit)
 export(calculateDMN)
 export(calculateDMNgroup)
 export(calculateDPCoA)
-export(calculateDistance)
 export(calculateJSD)
 export(calculateNMDS)
 export(calculateOverlap)
-export(calculateUniFrac)
 export(calculateUnifrac)
 export(countDominantFeatures)
 export(countDominantTaxa)
@@ -106,12 +104,10 @@ exportMethods(calculateCCA)
 exportMethods(calculateDMN)
 exportMethods(calculateDMNgroup)
 exportMethods(calculateDPCoA)
-exportMethods(calculateDistance)
 exportMethods(calculateJSD)
 exportMethods(calculateNMDS)
 exportMethods(calculateOverlap)
 exportMethods(calculateRDA)
-exportMethods(calculateUniFrac)
 exportMethods(calculateUnifrac)
 exportMethods(checkTaxonomy)
 exportMethods(countDominantFeatures)
