@@ -101,7 +101,6 @@ colData(tse)
 \item{\code{\link[mia:estimateRichness]{estimateRichness}}}
 \item{\code{\link[mia:estimateEvenness]{estimateEvenness}}}
 \item{\code{\link[mia:estimateDominance]{estimateDominance}}}
-\item{\code{\link[mia:calculateDistance]{calculateDistance}}}
 }
 }
 \author{
